Clean / remove obsolete (non-osgi) code